--- a/R/01_data_processing.Rmd
+++ b/R/01_data_processing.Rmd
@@ -8,11 +8,11 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(lubridate); library(jsonlite); library(tidyverse); library(here) 
+library(lubridate); library(magrittr); library(jsonlite); library(tidyverse); library(here) 
 ```
 
 ```{r}
-d_path <- "data/01_raw_data/goal_actions/pilotA/production-results"
+d_path <- "data/01_raw_data/goal_actions/pilotB/production-results"
 ```
 
 ## Load raw json data
@@ -64,13 +64,91 @@ df_anonymized <- df %>%
   distinct() %>% 
   mutate(id = 1:nrow(.)) 
 
-df_final <- left_join(df, df_anonymized, by = "workerid") %>% 
+df_wide <- left_join(df, df_anonymized, by = "workerid") %>% 
   select(id, everything(), -workerid)
+```
+
+## Clean up and variable creation
+
+Tidy up the data frame.
+
+```{r}
+prior <- df_wide %>% 
+  select(id, condition, prior_beliefs, prior_hypothesis) %>% 
+  mutate(hypothesis_type = "prior") %>% 
+  rename(slider_value = prior_beliefs,
+         hypothesis = prior_hypothesis)
+
+posterior <- df_wide %>% 
+  select(id, condition, posterior_beliefs, posterior_hypothesis) %>% 
+  mutate(hypothesis_type = "posterior") %>% 
+  rename(slider_value = posterior_beliefs,
+         hypothesis = posterior_hypothesis)
+
+d_final <- bind_rows(prior, posterior) %>% 
+  mutate(slider_response_collapsed = ifelse(hypothesis == "Purple and Orange", 
+                                            "both_buttons", 
+                                            "single_button"),
+         slider_value = as.integer(slider_value))
+```
+
+Normalize the sliders.
+
+```{r}
+d_final %<>% 
+  group_by(id, hypothesis_type) %>% 
+  mutate(slider_value_normalized = round(slider_value / sum(slider_value), 3)) %>% 
+  ungroup()
+```
+
+Create variable that collapses across both single button responses.
+
+```{r}
+d_final_collapsed <- d_final %>% 
+  group_by(id, hypothesis_type, slider_response_collapsed) %>% 
+  mutate(slider_value_2 = sum(slider_value)) %>% 
+  select(id, hypothesis_type, slider_response_collapsed, slider_value_2, condition) %>% 
+  unique() %>% 
+  group_by(id, hypothesis_type, condition) %>% 
+  mutate(slider_value_norm_2 = round(slider_value_2 / sum(slider_value_2), 3)) %>% 
+  select(id, hypothesis_type, condition, slider_response_collapsed, slider_value_norm_2)
+```
+
+Add the second normalized slider variable to the belief data frame.
+
+```{r}
+d_final %<>% left_join(., d_final_collapsed)
+```
+
+Add participant info.
+
+```{r}
+d_final %<>% left_join(., 
+                         select(df_wide, id, condition, browser:action_trial_time) %>% unique(),
+                         by = c("id", "condition"))
+```
+
+Now create a collaposed action response variable and add to the beliefs data frame
+
+```{r}
+df_wide %<>% mutate(action_response_collapsed = ifelse(action_response == "orange_and_purple", 
+                                                       "both_buttons", 
+                                                       "single_button"))
+```
+
+Now join everything together and create some factor variables in the order we want for plotting.
+
+```{r}
+d_final %<>%
+  left_join(., select(df_wide, id, condition, action_response_collapsed, action_response) %>% unique(),
+            by = c("id", "condition")) %>% 
+  mutate(hypothesis_type = factor(hypothesis_type) %>% fct_rev(),
+         slider_response_collapsed = factor(slider_response_collapsed) %>% fct_rev()) 
 ```
 
 ## Write to disk. 
 
 ```{r}
-write_csv(df_final, path = here("/data/02_tidy_data", "goal_actions_tidy.csv"))
+write_csv(d_final, path = here("/data/02_tidy_data", "goal_actions_tidy_pilotB.csv"))
 ```
 
